# honeypot-mil

./: AUDIT.md  Dockerfile  INTEGRATIONS.md  INTEROP.md  README.md  SOURCES.md  UPSTREAM.md  install.ps1  install.sh  pyproject.toml
cognis_mil/: audit.py  cli.py
demos/: SCENARIO.md  events.jsonl
docs/: INSTALL.md
examples/: help.txt  version.txt
honeypot_mil/: __init__.py  __main__.py  cli.py  connect.py  core.py
tests/: test_connect.py  test_hardening.py  test_smoke.py
